dynamodel_tests/tests/ui/fails/attribute/both_try_from_and_try_from_item.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
struct VideoComment {
    #[dynamodel(try_from = "foo", try_from_item = "bar")]
    timestamp: String
}

fn main() {}
